--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.1",
-    "bootstrap": "^5.2.1",
-    "ejs": "^3.1.8",
+    "connect-flash": "^0.1.1",
+    "ejs-mate": "^4.0.0",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "mongoose": "^6.6.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^7.1.2"
   }
 }
